src/test/deca/syntax/invalid/while2.deca
//Description
//    Vérifier le while
//
//Résultats :
//    Erreur Syntaxique ligne 9
//

{
while(a 4){{}}
}
